--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,34 @@ cmd/tmp/*
 cmd/
 cmd/*
 provider_cmd_*.go
+cmd/provider_cmd_alicloud.go
+cmd/provider_cmd_aws.go
+cmd/provider_cmd_azure.go
+cmd/provider_cmd_commercetools.go
+cmd/provider_cmd_datadog.go
+cmd/provider_cmd_digitalocean.go
+cmd/provider_cmd_equinixmetal.go
+cmd/provider_cmd_fastly.go
+cmd/provider_cmd_github.go
+cmd/provider_cmd_gmailfilter.go
+cmd/provider_cmd_google.go
+cmd/provider_cmd_grafana.go
+cmd/provider_cmd_heroku.go
+cmd/provider_cmd_ibm.go
+cmd/provider_cmd_keycloak.go
+cmd/provider_cmd_kubernetes.go
+cmd/provider_cmd_linode.go
+cmd/provider_cmd_logzio.go
+cmd/provider_cmd_mikrotik.go
+cmd/provider_cmd_newrelic.go
+cmd/provider_cmd_ns1.go
+cmd/provider_cmd_octopusdeploy.go
+cmd/provider_cmd_openstack.go
+cmd/provider_cmd_pagerduty.go
+cmd/provider_cmd_panos.go
+cmd/provider_cmd_rabbitmq.go
+cmd/provider_cmd_tencentcloud.go
+cmd/provider_cmd_vultr.go
+cmd/provider_cmd_xenorchestra.go
+cmd/provider_cmd_yandex.go
+cmd/root.go
